--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
 spring.datasource.url = jdbc:mysql://localhost:3306/todolist?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = Sri@1104
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 
 spring.rabbitmq.host = localhost
@@ -13,3 +12,5 @@ spring.rabbitmq.password = guest
 rabbitmq.queue.name = rabbit_queue 
 rabbitmq.exchange.name = rabbit_exchange
 rabbitmq.routing.key = rabbit_routing_key
+
+spring.batch.jdbc.initialize-schema = ALWAYS
